assets/css/projects.css
*:before, *:after {
    box-sizing: border-box;
    font-family: 'Montserrat Alternates', sans-serif;
    margin: 0;
    padding: 0;
    height: 100%;
}

html,body {
    margin:0;
    padding:0;
    height: 100%;
    }


main {
    background-color: lightgray;
    font-family: 'Montserrat Alternates', sans-serif;
    height: 100%;
    padding-top: 7em;
    overflow: hidden;
    display: flex;
    padding-left: 55px;
}

.header {
    display: flex;
    flex-direction: flex;
    font-family: 'Montserrat Alternates', sans-serif;
    background: rgb(155, 153, 153);
    letter-spacing: 10px;
    font-size: 1.5em;
    position: fixed;
    height: 15%;
    width: 100%;
    padding-left: 604px;
}

.home-button {
    padding-top: 15px;
    padding-left: 50px;
    padding-right: 2em;
    position: absolute; top:0; right:0;
    font-size: 1em;
    color: #000;
    letter-spacing: 2px;
    text-decoration: none;
}

.featured-proj {
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    justify-content: space-around;
    padding-right: 1.5em;
    padding-top: 2em;
    text-align: center;
}

.single-proj {
    background-color: rgb(252, 247, 240);
    margin: 10px;
    flex: 1 1 calc(33.33% - 30px);
    border: 1.5px solid rgb(112, 3, 3);
    text-align: center;
    max-width: 33.33%;
}

.featured-text {
    flex-wrap: flex;
    font-size: 1rem;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + .main {
    padding-top: 102px;
}


@media screen and (min-width: 480px) {

    .text-item {
        font-size: 4vw;
    }
    
    .text-item-header {
        font-size: 6vw;
    }

    .featured-img {
        width: 100%;
    }
}

    .header, 
    .featured {
    display: flex;
    margin: 0 auto;
    max-width: 1240px;
    }

    .featured {
        margin: 30px auto 0;
    }

    .featured-proj {
        margin: 20px 20px 20px 0;
    }
    .featured-proj:last-child {
        margin-right: 0;
    }


@media screen and (min-width: 830px ) {
    .text-item {
        font-size: 2vw;
    }
    
    .text-item-header {
        font-size: 4vw;
    } 
}

@media screen and (min-width: 1300px) {
    .text-item {
        font-size: 1vw;
    }
    
    .text-item-header {
        font-size: 3vw;
    } 
}

@media screen and (max-width: 850px) {
    .featured-proj {
        display: flex;
        flex-direction: column;
        flex-wrap: flex;
    }

    .single-proj {
        width: 100%;
    }
}

